--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,7 @@
 .container {
-	min-height: 100vh;
 	display: flex;
+	min-height: 100vh;
+	padding: 5rem 0;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
@@ -14,6 +15,10 @@
   	text-decoration: underline;
 }
 
+.title, .container p {
+  	text-align: center;
+}
+
 .title {
 	margin: 0 0 1rem;
 	line-height: 1.15;
@@ -21,10 +26,6 @@
 }
 .container p {
 	font-size: 1.5rem;
-}
-
-.title, .container p {
-  	text-align: center;
 }
 
 .grid {
@@ -57,15 +58,10 @@
 	margin: 0 0 1rem 0;
 	font-size: 1.5rem;
 }
-
 .card p {
 	margin: 0;
 	font-size: 1.25rem;
 	line-height: 1.5;
-}
-
-.logo {
-  	height: 1em;
 }
 
 @media (max-width: 600px) {
