--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -1,9 +1,9 @@
 .container {
 	display: grid;
 	margin: 2rem auto;
-	width: 70%;
+	width: 75%;
 	grid-template-areas: ". .";
-	grid-template-columns: 1fr 2.5fr;
+	grid-template-columns: .9fr 2.5fr;
 }
 @media (max-width: 500px) {
 	.container {
