--- a/src/custom.css
+++ b/src/custom.css
@@ -7,8 +7,8 @@
 	--ifm-color-primary-lighter: #359962;
 	--ifm-color-primary-lightest: #3cad6e;
 	--ifm-code-font-size: 95%;
-	--ifm-h1-font-size: 2.4rem;
-	--ifm-h2-font-size: 1.8rem;
+	--ifm-h1-font-size: 36px;
+	--ifm-h2-font-size: 30px;
 	--docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 	--aa-primary-color-rgb: 100,49,255;
 	--aa-muted-color-alpha: 0.8;
