--- a/src/custom.css
+++ b/src/custom.css
@@ -8,8 +8,8 @@
 	--ifm-color-primary-lightest: #3cad6e;
 	--ifm-code-font-size: 95%;
 	--ifm-h1-font-size: 36px;
-	--ifm-h2-font-size: 30px;
-	--docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+	--ifm-h2-font-size: 30px !important;
+	--docusaurus-highlighted-code-line-bg: #0000001a;
 	--aa-primary-color-rgb: 100,49,255;
 	--aa-muted-color-alpha: 0.8;
 }
@@ -22,5 +22,5 @@
 	--ifm-color-primary-light: #29d5b0;
 	--ifm-color-primary-lighter: #32d8b4;
 	--ifm-color-primary-lightest: #4fddbf;
-	--docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+	--docusaurus-highlighted-code-line-bg: #0000004d;
 }
