--- a/src/custom.css
+++ b/src/custom.css
@@ -12,7 +12,7 @@
 	--aa-muted-color-alpha: 0.8;
 }
 
-[data-theme='dark'] {
+[data-theme="dark"] {
 	--ifm-color-primary: #25c2a0;
 	--ifm-color-primary-dark: #21af90;
 	--ifm-color-primary-darker: #1fa588;
