--- a/src/custom.css
+++ b/src/custom.css
@@ -22,3 +22,7 @@
 	--ifm-color-primary-lightest: #4fddbf;
 	--docusaurus-highlighted-code-line-bg: #0000004d;
 }
+
+.markdown li>p {
+	margin-bottom: 0;
+}
