--- a/src/custom.css
+++ b/src/custom.css
@@ -28,8 +28,13 @@
 }
 
 ul[role="tablist"] + div.margin-top--md {
-	margin-top: .7rem !important;
+	margin-top: .5rem !important;
+    padding-left: 6px;
 }
 li[role="tab"] {
 	padding: 5px 12px;
+}
+
+nav.menu {
+	padding-bottom: 20px;
 }
