--- a/src/custom.css
+++ b/src/custom.css
@@ -12,7 +12,7 @@
 	--aa-muted-color-alpha: 0.8;
 }
 
-[data-theme="dark"] {
+html[data-theme="dark"] {
 	--ifm-color-primary: #25c2a0;
 	--ifm-color-primary-dark: #21af90;
 	--ifm-color-primary-darker: #1fa588;
@@ -28,16 +28,17 @@
 }
 
 ul[role="tablist"] + div.margin-top--md {
-	margin-top: .5rem !important;
-	padding-left: 6px;
+	margin-top: 5px !important;
+	padding-left: 8px;
 }
 
-li[role="tab"] {
+.tabs__item {
 	padding: 5px 12px;
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
+    border-bottom: 2px solid #0000;
 }
-li[role="tab"]:not(.tabs__item--active) {
+.tabs__item:not(.tabs__item--active) {
 	border-bottom-color: #dbdbdb;
 }
 
@@ -45,6 +46,6 @@ nav.menu {
 	padding-bottom: 25px;
 }
 
-footer {
+footer.footer {
 	padding: 12px;
 }
